EPOS/Borland Delphi/Definition Files/Delphi XE3/Definitions.pas


{Error Handling}
    function VCS_GetNbOfDeviceError(KeyHandle: Longint; NodeID: Word; var pNbDeviceError: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetNbOfDeviceError@16';
    function VCS_GetDeviceErrorCode(KeyHandle: Longint; NodeID: Word; DeviceErrorNumber: Byte; var pDeviceErrorCode: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetDeviceErrorCode@20';

{Motion Info}
    function VCS_GetMovementState(KeyHandle: Longint; NodeID: Word; var pTargetReached: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetMovementState@16';
    function VCS_GetPositionIs(KeyHandle: Longint; NodeID: Word; var pPositionIs: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPositionIs@16';
    function VCS_GetVelocityIs(KeyHandle: Longint; NodeID: Word; var pVelocityIs: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVelocityIs@16';
    function VCS_GetVelocityIsAveraged(KeyHandle: Longint; NodeID: Word; var pVelocityIsAveraged: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVelocityIsAveraged@16';
    function VCS_GetCurrentIs(KeyHandle: Longint; NodeID: Word; var pCurrentIs: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetCurrentIs@16';
    function VCS_GetCurrentIsEx(KeyHandle: Longint; NodeID: Word; var pCurrentIs: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetCurrentIsEx@16';
    function VCS_GetCurrentIsAveraged(KeyHandle: Longint; NodeID: Word; var pCurrentIsAveraged: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetCurrentIsAveraged@16';
    function VCS_GetCurrentIsAveragedEx(KeyHandle: Longint; NodeID: Word; var pCurrentIsAveraged: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetCurrentIsAveragedEx@16';
    function VCS_WaitForTargetReached(KeyHandle: Longint; NodeID: Word; Timeout: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_WaitForTargetReached@16';

{Profile Position Mode }
    function VCS_ActivateProfilePositionMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateProfilePositionMode@12';
    function VCS_SetPositionProfile(KeyHandle: Longint; NodeID: Word; ProfileVelocity: LongWord; ProfileAcceleration: LongWord; ProfileDeceleration: LongWord; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetPositionProfile@24';
    function VCS_GetPositionProfile(KeyHandle: Longint; NodeID: Word; var pProfileVelocity: LongWord; var pProfileAcceleration: LongWord; var pProfileDeceleration: LongWord; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPositionProfile@24';
    function VCS_MoveToPosition(KeyHandle: Longint; NodeID: Word; TargetPosition: Longint; Absolute: LongBool; Immediately: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_MoveToPosition@24';
    function VCS_GetTargetPosition(KeyHandle: Longint; NodeID: Word; var pTargetPosition: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetTargetPosition@16';
    function VCS_HaltPositionMovement(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_HaltPositionMovement@12';
  {Advanced Functions}
    function VCS_EnablePositionWindow(KeyHandle: Longint; NodeID: Word; PositionWindow: Longint; PositionWindowTime: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_EnablePositionWindow@20';
    function VCS_DisablePositionWindow(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DisablePositionWindow@12';

{Profile Velocity Mode}
    function VCS_ActivateProfileVelocityMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateProfileVelocityMode@12';
    function VCS_SetVelocityProfile(KeyHandle: Longint; NodeID: Word; ProfileAcceleration: LongWord; ProfileDeceleration: LongWord; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetVelocityProfile@20';
    function VCS_GetVelocityProfile(KeyHandle: Longint; NodeID: Word; var pProfileAcceleration: LongWord; var pProfileDeceleration: LongWord; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVelocityProfile@20';
    function VCS_MoveWithVelocity(KeyHandle: Longint; NodeID: Word; TargetVelocity: LongInt; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_MoveWithVelocity@16';
    function VCS_GetTargetVelocity(KeyHandle: Longint; NodeID: Word; var pTargetVelocity: LongInt; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetTargetVelocity@16';
    function VCS_HaltVelocityMovement(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_HaltVelocityMovement@12';
  {Advanced Functions}
    function VCS_EnableVelocityWindow(KeyHandle: Longint; NodeID: Word; VelocityWindow: Longint; VelocityWindowTime: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_EnableVelocityWindow@20';
    function VCS_DisableVelocityWindow(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DisableVelocityWindow@12';

{Homing Mode}
    function VCS_ActivateHomingMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateHomingMode@12';
    function VCS_SetHomingParameter(KeyHandle: Longint; NodeID: Word; HomingAcceleration: LongWord; SpeedSwitch: LongWord; SpeedIndex: LongWord; HomeOffset: Longint; CurrentThreshold: Word; HomePosition: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetHomingParameter@36';
    function VCS_GetHomingParameter(KeyHandle: Longint; NodeID: Word; var pHomingAcceleration: LongWord; var pSpeedSwitch: LongWord; var pSpeedIndex: LongWord; var pHomeOffset: Longint; var pCurrentThreshold: Word; var pHomePosition: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetHomingParameter@36';
    function VCS_FindHome(KeyHandle: Longint; NodeID: Word; HomingMode: Shortint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_FindHome@16';
    function VCS_StopHoming(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_StopHoming@12';
    function VCS_DefinePosition(KeyHandle: Longint; NodeID: Word; HomePosition: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DefinePosition@16';
    function VCS_WaitForHomingAttained(KeyHandle: Longint; NodeID: Word; Timeout: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_WaitForHomingAttained@16';
    function VCS_GetHomingState(KeyHandle: Longint; NodeID: Word; var pHomingAttained: LongBool; var pHomingError: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetHomingState@20';

{Interpolated Position Mode}
    function VCS_ActivateInterpolatedPositionMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateInterpolatedPositionMode@12';
    function VCS_SetIpmBufferParameter(KeyHandle: Longint; NodeID: Word; UnderflowWarningLimit: Smallint; OverflowWarningLimit: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetIpmBufferParameter@20';
    function VCS_GetIpmBufferParameter(KeyHandle: Longint; NodeID: Word; var pUnderflowWarningLimit: Smallint; var pOverflowWarningLimit: Smallint; var pMaxBufferSize: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetIpmBufferParameter@24';
    function VCS_ClearIpmBuffer(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ClearIpmBuffer@12';
    function VCS_GetFreeIpmBufferSize(KeyHandle: Longint; NodeID: Word; var pBufferSize: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetFreeIpmBufferSize@16';
    function VCS_AddPvtValueToIpmBuffer(KeyHandle: Longint; NodeID: Word; Position: Longint; Velocity: Longint; Time: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_AddPvtValueToIpmBuffer@24';
    function VCS_StartIpmTrajectory(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_StartIpmTrajectory@12';
    function VCS_StopIpmTrajectory(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_StartIpmTrajectory@12';
    function VCS_GetIpmStatus(KeyHandle: Longint; NodeID: Word; var pTrajectoryRunning: Longint; var pIsUnderflowWarning: Longint; var pIsOverflowWarning: Longint; var pIsVelocityWarning: Longint; var pIsAccelerationWarning: Longint; var pIsUnderflowError: Longint; var pIsOverflowError: Longint; var pIsVelocityError: Longint; var pIsAccelerationError: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetIpmStatus@48';

{Position Mode}
    function VCS_ActivatePositionMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivatePositionMode@12';
    function VCS_SetPositionMust(KeyHandle: Longint; NodeID: Word; PositionMust: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetPositionMust@16';
    function VCS_GetPositionMust(KeyHandle: Longint; NodeID: Word; var pPositionMust: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPositionMust@16';

  {Advanced Functions}
    function VCS_ActivateAnalogPositionSetpoint(KeyHandle: Longint; NodeID: Word; AnalogInputNumber: Smallint; Scaling: Single; Offset: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateAnalogPositionSetpoint@24';
    function VCS_DeactivateAnalogPositionSetpoint(KeyHandle: Longint; NodeID: Word; AnalogInputNumber: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DeactivateAnalogPositionSetpoint@16';
    function VCS_EnableAnalogPositionSetpoint(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_EnableAnalogPositionSetpoint@12';
    function VCS_DisableAnalogPositionSetpoint(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DisableAnalogPositionSetpoint@12';

{Velocity Mode}
    function VCS_ActivateVelocityMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateVelocityMode@12';
    function VCS_SetVelocityMust(KeyHandle: Longint; NodeID: Word; VelocityMust: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetVelocityMust@16';
    function VCS_GetVelocityMust(KeyHandle: Longint; NodeID: Word; var pVelocityMust: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVelocityMust@16';
